# MLOPS

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: main.py
app/api/: nlp.py  router.py  stt.py
deploy/terraform/: .terraform.lock.hcl  main.tf  terraform.tfstate  terraform.tfstate.backup
scripts/: deploy_vm.sh
src/inference/: answerer.py  qa.py  stt.py  summarize.py  transcribe.py
tests/load/: locustfile.py
