[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.128.2",
    "faster-whisper==1.2.1",
    "python-multipart==0.0.22",
    "tiktoken>=0.12.0",
    "torch==2.10.0",
    "transformers==5.1.0",
    "uvicorn==0.40.0",
]
